[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Switch_turn.gd" type="Script" id=2]
[ext_resource path="res://Turn.png" type="Texture" id=3]
[ext_resource path="res://Button_in_container_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://HContainer_scene.gd" type="Script" id=5]
[ext_resource path="res://VContainer_scene.gd" type="Script" id=6]
[ext_resource path="res://Rotate_button.gd" type="Script" id=7]
[ext_resource path="res://rotate2.png" type="Texture" id=8]
[ext_resource path="res://ship_pngs/4mini_ship_enemy.png" type="Texture" id=9]
[ext_resource path="res://ship_pngs/4mini_ship_friendly.png" type="Texture" id=10]
[ext_resource path="res://ship_pngs/3mini_ship_enemy.png" type="Texture" id=11]
[ext_resource path="res://ship_pngs/1mini_ship_friendly.png" type="Texture" id=12]
[ext_resource path="res://ship_pngs/2mini_ship_friendly.png" type="Texture" id=13]
[ext_resource path="res://ship_pngs/1mini_ship_enemy.png" type="Texture" id=14]
[ext_resource path="res://ship_pngs/2mini_ship_enemy.png" type="Texture" id=15]
[ext_resource path="res://ship_pngs/3mini_ship_friendly.png" type="Texture" id=16]
[ext_resource path="res://Ship_menu.gd" type="Script" id=17]
[ext_resource path="res://your_map.png" type="Texture" id=18]

[node name="VBoxContainer" type="VBoxContainer"]
margin_left = 600.0
margin_right = 1000.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="." groups=[
"show_ships",
]]
margin_right = 400.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 200 )
custom_constants/separation = 12
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
custom_constants/separation = 9
alignment = 1
script = ExtResource( 5 )

[node name="Button1" parent="VBoxContainer/HBoxContainer" groups=[
"1",
] instance=ExtResource( 4 )]
margin_right = 127.0
text = "1 ship"

[node name="Button2" parent="VBoxContainer/HBoxContainer" groups=[
"2",
] instance=ExtResource( 4 )]
margin_left = 136.0
margin_right = 263.0
text = "2 ship"

[node name="Button3" parent="VBoxContainer/HBoxContainer" groups=[
"3",
] instance=ExtResource( 4 )]
margin_left = 272.0
margin_right = 400.0
text = "3 ship"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Button4" parent="VBoxContainer/HBoxContainer2" groups=[
"4",
] instance=ExtResource( 4 )]
margin_right = 400.0
text = "4 ship"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 400.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 100 )
alignment = 1
script = ExtResource( 5 )

[node name="Switch_turn" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 46.0
margin_right = 146.0
margin_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotate_button" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Show_ships_button" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 254.0
margin_right = 354.0
margin_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 18 )

[node name="Ship_menu" type="HBoxContainer" parent="."]
margin_top = 328.0
margin_right = 400.0
margin_bottom = 598.0
script = ExtResource( 17 )

[node name="VBoxContainer1" type="VBoxContainer" parent="Ship_menu"]
margin_right = 198.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer4" type="HBoxContainer" parent="Ship_menu/VBoxContainer1"]
margin_right = 198.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer1/HBoxContainer4"]
margin_right = 15.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer1/HBoxContainer4"]
margin_left = 19.0
margin_top = 23.0
margin_right = 59.0
margin_bottom = 37.0
text = "Left: 1"

[node name="HBoxContainer3" type="HBoxContainer" parent="Ship_menu/VBoxContainer1"]
margin_top = 70.0
margin_right = 198.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer1/HBoxContainer3"]
margin_top = 7.0
margin_right = 15.0
margin_bottom = 52.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 11 )

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer1/HBoxContainer3"]
margin_left = 19.0
margin_top = 23.0
margin_right = 59.0
margin_bottom = 37.0
text = "Left: 2"

[node name="HBoxContainer2" type="HBoxContainer" parent="Ship_menu/VBoxContainer1"]
margin_top = 140.0
margin_right = 198.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer1/HBoxContainer2"]
margin_top = 15.0
margin_right = 15.0
margin_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 15 )

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer1/HBoxContainer2"]
margin_left = 19.0
margin_top = 23.0
margin_right = 59.0
margin_bottom = 37.0
text = "Left: 3"

[node name="HBoxContainer1" type="HBoxContainer" parent="Ship_menu/VBoxContainer1"]
margin_top = 210.0
margin_right = 198.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer1/HBoxContainer1"]
margin_top = 22.0
margin_right = 15.0
margin_bottom = 37.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer1/HBoxContainer1"]
margin_left = 19.0
margin_top = 23.0
margin_right = 59.0
margin_bottom = 37.0
text = "Left: 4"

[node name="VBoxContainer2" type="VBoxContainer" parent="Ship_menu"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer4" type="HBoxContainer" parent="Ship_menu/VBoxContainer2"]
margin_left = 106.0
margin_right = 198.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer2/HBoxContainer4"]
margin_top = 23.0
margin_right = 73.0
margin_bottom = 37.0
text = "You have: 1"

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer2/HBoxContainer4"]
margin_left = 77.0
margin_right = 92.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Ship_menu/VBoxContainer2"]
margin_left = 106.0
margin_top = 70.0
margin_right = 198.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer2/HBoxContainer3"]
margin_top = 23.0
margin_right = 73.0
margin_bottom = 37.0
text = "You have: 2"

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer2/HBoxContainer3"]
margin_left = 77.0
margin_top = 7.0
margin_right = 92.0
margin_bottom = 52.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 16 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Ship_menu/VBoxContainer2"]
margin_left = 106.0
margin_top = 140.0
margin_right = 198.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer2/HBoxContainer2"]
margin_top = 23.0
margin_right = 73.0
margin_bottom = 37.0
text = "You have: 3"

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer2/HBoxContainer2"]
margin_left = 77.0
margin_top = 15.0
margin_right = 92.0
margin_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 13 )

[node name="HBoxContainer1" type="HBoxContainer" parent="Ship_menu/VBoxContainer2"]
margin_left = 106.0
margin_top = 210.0
margin_right = 198.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ship_menu/VBoxContainer2/HBoxContainer1"]
margin_top = 23.0
margin_right = 73.0
margin_bottom = 37.0
text = "You have: 4"

[node name="TextureButton" type="TextureButton" parent="Ship_menu/VBoxContainer2/HBoxContainer1"]
margin_left = 77.0
margin_top = 22.0
margin_right = 92.0
margin_bottom = 37.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Switch_turn" to="VBoxContainer/HBoxContainer3/Switch_turn" method="_on_Switch_turn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Rotate_button" to="VBoxContainer/HBoxContainer3/Rotate_button" method="_on_Rotate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Show_ships_button" to="." method="_on_Show_ships_button_pressed"]
